Fix footer logo, social media and address alignment on desktop

--- a/great-western-wine-theme/assets/scss/layouts/footer/_footer.scss
+++ b/great-western-wine-theme/assets/scss/layouts/footer/_footer.scss
@@ -193,6 +193,7 @@
 
     @include breakpoint("medium") {
         width: auto;
+        text-align: left;
     }
 }
 
